# foldertree

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  structure.tree
.github/workflows/: publish.yml
examples/: structure_2.tree  structure_3.tree  structure_4.tree
foldertree/: __init__.py  cli.py  core.py
tests/: test_cli.py  test_core.py  test_generator.py  test_parser.py
